php+nginx/docker/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-php-example
  labels:
    app.kubernetes.io/name: docker-php-example
    app.kubernetes.io/component: webserver
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: docker-php-example
      app.kubernetes.io/component: webserver
  replicas: 3
  template:
    metadata:
      labels:
        name: docker-php-example
        app.kubernetes.io/name: docker-php-example
        app.kubernetes.io/component: webserver
    spec:
      containers:
      - name: nginx
        image: pmconnect/docker-php-example-server:latest
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 8080
      - name: php
        image: pmconnect/docker-php-example-backend:latest
        imagePullPolicy: Always
        ports:
        - name: fpm
          containerPort: 9000
