php+nginx/docker/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-php-example
  labels:
    app.kubernetes.io/name: docker-php-example
    app.kubernetes.io/component: webserver
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - secretName: docker-php-example.app.k8s.sandboxed.xyz.crt
  rules:
  - host: docker-php-example.app.k8s.sandboxed.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-php-example
          servicePort: http
